--- a/hw2/main_hw2_blank.ipynb
+++ b/hw2/main_hw2_blank.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,8 @@
     "                nclass = self.y[k]\n",
     "                neighborclasses.append(nclass)\n",
     "\n",
-    "            \n",
+    "            # Print to find 3.2 classification probabilities\n",
+    "            print(\"knn classes:\", neighborclasses)\n",
     "\n",
     "            from collections import Counter\n",
     "            # count with one-hot encoding\n",
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +933,6 @@
    "source": [
     "phiX_stars = phi(X_stars)\n",
     "\n",
-    "# no L2 reg for 3b\n",
     "basis_model = SoftmaxRegression(eta=0.001, lam=0.001)\n",
     "basis_model.fit(bias_basis(phiX_stars), y_stars)\n",
     "\n",
@@ -940,7 +940,13 @@
     "                   X=X_stars,\n",
     "                   y=y_stars,\n",
     "                   title='basis_regression_result',\n",
-    "                   basis=bias_basis)"
+    "                   basis=bias_basis)\n",
+    "\n",
+    "# visualize_boundary(model=basis_model,\n",
+    "#                    X=phiX_stars,\n",
+    "#                    y=y_stars,\n",
+    "#                    title='basis_regression_result',\n",
+    "#                    basis=bias_basis)"
    ]
   },
   {
@@ -996,20 +1002,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "knn classes: [0]\n",
+      "knn classes: [0]\n",
+      "knn classes: [0, 0, 0, 0, 0]\n",
+      "knn classes: [0, 2, 0, 2, 2]\n",
       "Passed KNN tests\n"
      ]
     }
@@ -1071,6 +1074,47 @@
     "                   title='knn5_regression_result',\n",
     "                   basis=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn classes: [0]\n",
+      "knn classes: [0, 0, 0, 0, 0]\n",
+      "foo\n",
+      "[[1.00000000e+00 1.31778926e-28 2.56768493e-40]]\n",
+      "[[0.03425432 0.96455651 0.00118917]]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict for x = [3, -2]\n",
+    "x = np.array([[3, -2]])\n",
+    "a = softmax_model.predict_proba(bias_basis(x))\n",
+    "b = basis_model.predict_proba(bias_basis(phi(x)))\n",
+    "c = knn1_model.predict(x)\n",
+    "d = knn5_model.predict(x)\n",
+    "\n",
+    "print(\"foo\")\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
