--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -376,10 +376,11 @@ Since testing on a larger patient population is expensive for various reasons, t
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \begin{sol}{}{2}
-  \begin{enumerate}
-    \item 
-  \end{enumerate}
-
+  \begin{center}
+    \includegraphics[angle=270,width=0.9\linewidth]{images/Problem_2_1_2.JPG}\\
+    \includegraphics[angle=270,width=0.9\linewidth]{images/Problem_2_3.JPG}\\
+    \includegraphics[angle=270,width=0.9\linewidth]{images/Problem_2_4.JPG}\\
+  \end{center}
 \end{sol}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
