KNN PRINTS REMOVED

--- a/hw2/main_hw2_blank.ipynb
+++ b/hw2/main_hw2_blank.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
     "                neighborclasses.append(nclass)\n",
     "\n",
     "            # Print to find 3.2 classification probabilities\n",
-    "            print(\"knn classes:\", neighborclasses)\n",
+    "            # print(\"knn classes:\", neighborclasses)\n",
     "\n",
     "            from collections import Counter\n",
     "            # count with one-hot encoding\n",
@@ -927,19 +927,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Failed for basis regression: incorrect weights",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[377], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m test_p3_softmax(softmax_model, basis_model)\n",
-      "File \u001b[0;32m~/Documents/Github/cs181/cs181-s23-homeworks/hw2/T2_P3_TestCases.py:24\u001b[0m, in \u001b[0;36mtest_p3_softmax\u001b[0;34m(vanilla_model, basis_model)\u001b[0m\n\u001b[1;32m     21\u001b[0m student_basis_weights \u001b[39m=\u001b[39m basis_model\u001b[39m.\u001b[39mW\n\u001b[1;32m     23\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mallclose(student_v_weights, vanilla_weights, atol\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFailed for softmax regression: incorrect weights\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 24\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mallclose(student_basis_weights, basis_weights, atol\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFailed for basis regression: incorrect weights\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPassed softmax regression tests\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Failed for basis regression: incorrect weights"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed softmax regression tests\n"
      ]
     }
    ],
@@ -989,17 +984,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn classes: [0]\n",
-      "knn classes: [0]\n",
-      "knn classes: [0, 0, 0, 0, 0]\n",
-      "knn classes: [0, 2, 0, 2, 2]\n",
       "Passed KNN tests\n"
      ]
     }
