--- a/hw2/main_hw2_blank.ipynb
+++ b/hw2/main_hw2_blank.ipynb
@@ -1055,15 +1055,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn classes: [0]\n",
-      "knn classes: [0, 0, 0, 0, 0]\n",
       "foo\n",
       "[[1.00000000e+00 1.31778926e-28 2.56768493e-40]]\n",
       "[[0.03425432 0.96455651 0.00118917]]\n",
@@ -1080,7 +1078,7 @@
     "c = knn1_model.predict(x)\n",
     "d = knn5_model.predict(x)\n",
     "\n",
-    "print(\"foo\")\n",
+    "# Classification probabilities for x = [3, -2]\n",
     "print(a)\n",
     "print(b)\n",
     "print(c)\n",
