--- a/hw3/homework3.tex
+++ b/hw3/homework3.tex
@@ -522,12 +522,13 @@ words in total). Bullet points are appropriate.
 % Name and Calibration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{Name}
+Aidan Tai
 
 \subsection*{Collaborators and Resources}
-Whom did you work with, and did you use any resources beyond cs181-textbook and your notes?
+Course materials
 
 \subsection*{Calibration}
-Approximately how long did this homework take you to complete (in hours)? 
+
 
 
 \end{document}
