--- a/hw3/homework3.tex
+++ b/hw3/homework3.tex
@@ -205,7 +205,18 @@ Please submit your \textbf{\LaTeX\ file and code files to the Gradescope assignm
 
 \end{framed}
 
-\subsection*{Solution:}
+
+\newpage
+\begin{sol}{}
+  \begin{center}
+    \begin{enumerate}
+      \item Find $argmax_\theta \log(p(Y = y | \theta))$\\
+      $P(Y = y) = \binom{N}{y}\theta^{y}(1-\theta)^{N-y}$\\
+
+      
+    \end{enumerate}
+  \end{center}
+\end{sol}
 
 \newpage
 
