--- a/hw5/common.sty
+++ b/hw5/common.sty
@@ -181,7 +181,7 @@
 %\setlength{\parskip}{1ex}
 \filbreak 
 \needspace{3\baselineskip}
-{\begin{center}\varhrulefill \bf #1 \;Solution  \varhrulefill\end{center}}{}
+{\begin{center}\varhrulefill \bf #1 \;Solution #2 \varhrulefill\end{center}}{}
 }{%
 \par{\begin{center}\varhrulefill \bf \;End Solution  \varhrulefill\end{center}}{}
 \needspace{-3\baselineskip}
@@ -190,8 +190,9 @@
 %   \end{center}
 }
 
-\newenvironment{sol}{%
-   \begin{solunnumbered}{}{}
+
+\newenvironment{sol}[2]{%
+   \begin{solunnumbered}{#1}{#2}
 }{%
    \end{solunnumbered}
 }
