--- a/hw5/homework5.tex
+++ b/hw5/homework5.tex
@@ -243,12 +243,68 @@ Every computation consumes energy. Over the past decades large scale data center
 \end{problem}
     
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Solution 1
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\begin{sol}{}{1}
+  \begin{center}
+    \begin{enumerate}
+        \item \begin{enumerate}
+            \item pPCA:
+            \item HMM:
+        \end{enumerate}
+        \item \begin{enumerate}
+            \item design choice
+            \item modification
+        \end{enumerate}
+        \item \begin{enumerate}
+            \item history
+            \item reasonability
+        \end{enumerate}
+        \item discouting
+        \item \begin{enumerate}
+            \item randomness
+            \item vfit, vunfit
+        \end{enumerate}
+        \item calculate q
+    \end{enumerate}
+  \end{center}
+\end{sol}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Solution 2
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\begin{sol}{}{2}
+  \begin{center}
+    Evaluation:\\
+    Graph:
+  \end{center}
+\end{sol}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Solution 3
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\begin{sol}{}{3}
+  \begin{center}
+    \begin{enumerate}
+        \item Energy
+        \item RL
+        \item Alternatives
+    \end{enumerate}
+  \end{center}
+\end{sol}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Name and Calibration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \subsection*{Name}
+Aidan Tai
 \subsection*{Collaborators and Resources}
-Whom did you work with, and did you use any resources beyond cs181-textbook and your notes?
+
 \subsection*{Calibration}
-Approximately how long did this homework take you to complete (in hours)? 
+
 \end{document}
